@@ -158,7 +158,34 @@ op_amp
 id|MediaIsMII
 )paren
 (brace
+r_if
+c_cond
+(paren
 id|tulip_check_duplex
+c_func
+(paren
+id|dev
+)paren
+OL
+l_int|0
+)paren
+(brace
+id|netif_carrier_off
+c_func
+(paren
+id|dev
+)paren
+suffix:semicolon
+id|next_tick
+op_assign
+l_int|3
+op_star
+id|HZ
+suffix:semicolon
+)brace
+r_else
+(brace
+id|netif_carrier_on
 c_func
 (paren
 id|dev
@@ -170,6 +197,7 @@ l_int|60
 op_star
 id|HZ
 suffix:semicolon
+)brace
 )brace
 r_else
 r_if
